# porto02-gold_silver_price_etl

./: .env  README.md  docker-compose.yaml  pyproject.toml  table_schema.sql
dags/: metal_price_dags.py
src/: extract.py  load.py  transform.py  validate.py
